# flowforge

./: .coverage  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: validation.yml
docs/: components.md  project-specification.md
src/flowforge/: __main__.py  cli.py
src/flowforge/catalog/: __init__.py  models.py  registry.py
src/flowforge/catalog/components/: __init__.py  infrastructure.py  observability.py  runtime.py  workflow.py
src/flowforge/generation/: __init__.py  generate.py  models.py  project_writer.py  renderer.py
src/flowforge/planning/: __init__.py  diagnostic_details.py  diagnostics.py  errors.py  io.py  paths.py  schemas.py  validator.py
src/flowforge/templates/docs/: README.md.j2
tests/: conftest.py  test_cli.py
tests/catalog/: test_registry.py
tests/data/: distributed_batch_map_plan.yaml  invalid_component_type_plan.yaml  invalid_distributed_batch_map_plan.yaml  invalid_dlq_plan.yaml  invalid_locks_table_plan.yaml  invalid_plan.yaml  invalid_plan_semantic.yaml  locked_distributed_batch_map_plan.yaml  plan.yaml  plan_saved.yaml
tests/generation/: test_project_writer.py  test_renderer.py
tests/planning/: test_io.py  test_validator.py
