[project]
name = "flowforge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.18",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.3",
]

[project.urls]
homepage = "https://github.com/julianstephens/flowforge"
issues = "https://github.com/julianstephens/flowforge/issues"

[project.scripts]
flowforge = "flowforge.cli:app"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "S", "C4", "DTZ", "LOG", "G", "PYI", "Q", "RET", "SIM", "ARG", "PTH", "I", "N", "E", "W", "F", "PLE", "PLR", "PLW", "UP", "RUF", "TRY"]

[dependency-groups]
dev = [
    "moto>=5.2.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"